[tool.poetry]
name = "reptrack"
version = "0.1.0"
description = ""
authors = ["Cameron <cameronwood858@googlemail.com>"]
readme = "README.md"
packages = [{include = "reptrack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.5"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
